--- a/src/pages/index.mdx
+++ b/src/pages/index.mdx
@@ -3,10 +3,13 @@ layout: ../layouts/PageLayout.astro
 title: "Yusaku Nakajima | Portfolio"
 description: "中島 優作の研究ポートフォリオサイトです。"
 ---
+
 # Profile
 
 ## 中島 優作 (Yusaku Nakajima)
 **所属**: 大阪大学 / BWH Radiology Research
+
+**Links**: [[ORCID]](https://orcid.org/0000-0001-9926-9891) [[Google Scholar]](https://scholar.google.co.jp/citations?user=k-UzcUgAAAAJ&hl=ja)
 
 材料科学分野へメカトロニクスやロボティクスを応用した、ラボオートメーションの研究を行っています。
 実験作業を自動化するためのロボットハンドリングや、自律計測システムの開発に取り組んでいます。
@@ -62,7 +65,7 @@ description: "中島 優作の研究ポートフォリオサイトです。"
 
 ### 招待講演 (Invited Talks)
 * **中島優作**. *"ラボラトリーオートメーションのための粉体ハンドリング技術"* セラミックス協会第38回秋季シンポジウム, 2025年9月17日.
-* **中島優作**. *"材料科学における実験自動化とデータ活用 \~粉体プロセスのインフォマティクス\~"* IIBMP 2025, 2025年9月4日.
+* **中島優作**. *"材料科学における実験自動化とデータ活用 ~粉体プロセスのインフォマティクス~"* IIBMP 2025, 2025年9月4日.
 * **中島優作**. *"材料実験自動化に向けた粉体ハンドリング"* [デジタルラボ研究会](https://digital-laboratory.jp/), 2025年5月9日.
 * **中島優作**. *"コンパクトな自律型実験システム"* 日本化学会第105春季年会, 2025年3月27日.
 
