--- a/src/pages/index.mdx
+++ b/src/pages/index.mdx
@@ -65,7 +65,7 @@ description: "中島 優作の研究ポートフォリオサイトです。"
 
 ### 招待講演 (Invited Talks)
 * **中島優作**. *"ラボラトリーオートメーションのための粉体ハンドリング技術"* セラミックス協会第38回秋季シンポジウム, 2025年9月17日.
-* **中島優作**. *"材料科学における実験自動化とデータ活用 ~粉体プロセスのインフォマティクス~"* IIBMP 2025, 2025年9月4日.
+* **中島優作**. *"材料科学における実験自動化とデータ活用 粉体プロセスのインフォマティクス"* IIBMP 2025, 2025年9月4日.
 * **中島優作**. *"材料実験自動化に向けた粉体ハンドリング"* [デジタルラボ研究会](https://digital-laboratory.jp/), 2025年5月9日.
 * **中島優作**. *"コンパクトな自律型実験システム"* 日本化学会第105春季年会, 2025年3月27日.
 
@@ -80,9 +80,9 @@ description: "中島 優作の研究ポートフォリオサイトです。"
    *"Automated analysis of mechanochemically-induced reaction with in situ X-ray diffraction"* URCr 2023, Melbourne, Aug. 2023. (Oral)
 
 ### 国内学会発表 (Domestic Conferences)
+* **中島優作**, 他. *"模倣学習を用いた粉体粉砕ロボットシステムの評価"* 第43回日本ロボット学会学術講演会（RSJ2025）, 2025年9月3日.
 * **中島優作**, 他. *"ロボットによるメカノケミカル合成制御"* 第14回 CSJ化学フェスタ2024, 2024年10月24日.
 * **中島優作**, 他. *"圧縮応力とせん断応力によるメカノケミカル合成制御"* 第85回 応用物理学会秋季学術講演会, 2024年9月.
-* **中島優作**, 他. *"模倣学習を用いた粉体粉砕ロボットシステムの評価"* 第43回日本ロボット学会学術講演会（RSJ2025）, 2025年9月3日.
 * **中島優作**, 他. *"自動計測によるメカノケミカル反応プロセスの解明"* 第84回 応用物理学会 秋季学術講演会, 2023年9月.
 * **中島優作**, 他. *"自律実験のための粉体粉砕ロボットシステムの開発と評価"* 第70回 応用物理学会 春季学術講演会, 2023年3月.
 * **中島優作**, 他. *"自律的なX線回折実験システムの開発"* 第82回 応用物理学会 秋季学術講演会, 2021年9月.
