--- a/src/pages/index.mdx
+++ b/src/pages/index.mdx
@@ -71,7 +71,7 @@ description: "中島 優作の研究ポートフォリオサイトです。"
 
 ### 国際会議発表 (International Conferences)
 * **Yusaku Nakajima**, Yuki Nishihori, Keisuke Nagato, Yuki Yamaguchi, Kanta Ono.  
-   *"Evaluating the Applicability of Imitation Learning to Robotic Powder Grinding"* Accelerate Conference 2025, Aug. 2025. (Poster)
+   *"Evaluating the Applicability of Imitation Learning to Robotic Powder Grinding"* Accelerate Conference 2025, Aug. 12, 2025. (Poster)
 * **Yusaku Nakajima**, Kai Kawasaki, Yasuo Takeichi, Masashi Hamaya, Yoshitaka Ushiku, and Kanta Ono.  
    *"Force-controlled robotic mechanochemical synthesis"* Workshop on AI for Accelerated Materials Design, NeurIPS 2024, Vancouver, Dec. 2024. (Poster)
 * **Yusaku Nakajima**, Kai Kawasaki, Yasuo Takeichi, Masashi Hamaya, Yoshitaka Ushiku, and Kanta Ono.  
@@ -80,12 +80,12 @@ description: "中島 優作の研究ポートフォリオサイトです。"
    *"Automated analysis of mechanochemically-induced reaction with in situ X-ray diffraction"* URCr 2023, Melbourne, Aug. 2023. (Oral)
 
 ### 国内学会発表 (Domestic Conferences)
-* **中島優作**, 他. *"模倣学習を用いた粉体粉砕ロボットシステムの評価"* 第43回日本ロボット学会学術講演会（RSJ2025）, 2025年9月3日.
-* **中島優作**, 他. *"ロボットによるメカノケミカル合成制御"* 第14回 CSJ化学フェスタ2024, 2024年10月24日.
-* **中島優作**, 他. *"圧縮応力とせん断応力によるメカノケミカル合成制御"* 第85回 応用物理学会秋季学術講演会, 2024年9月.
-* **中島優作**, 他. *"自動計測によるメカノケミカル反応プロセスの解明"* 第84回 応用物理学会 秋季学術講演会, 2023年9月.
-* **中島優作**, 他. *"自律実験のための粉体粉砕ロボットシステムの開発と評価"* 第70回 応用物理学会 春季学術講演会, 2023年3月.
-* **中島優作**, 他. *"自律的なX線回折実験システムの開発"* 第82回 応用物理学会 秋季学術講演会, 2021年9月.
+* **中島優作**, 他. *"模倣学習を用いた粉体粉砕ロボットシステムの評価"* 第43回日本ロボット学会学術講演会（RSJ2025）, 2025年9月3日. (口頭)
+* **中島優作**, 他. *"ロボットによるメカノケミカル合成制御"* 第14回 CSJ化学フェスタ2024, 2024年10月24日. (ポスター)
+* **中島優作**, 他. *"圧縮応力とせん断応力によるメカノケミカル合成制御"* 第85回 応用物理学会秋季学術講演会, 2024年9月. (口頭)
+* **中島優作**, 他. *"自動計測によるメカノケミカル反応プロセスの解明"* 第84回 応用物理学会 秋季学術講演会, 2023年9月. (口頭)
+* **中島優作**, 他. *"自律実験のための粉体粉砕ロボットシステムの開発と評価"* 第70回 応用物理学会 春季学術講演会, 2023年3月. (口頭)
+* **中島優作**, 他. *"自律的なX線回折実験システムの開発"* 第82回 応用物理学会 秋季学術講演会, 2021年9月. (口頭)
 
 ### 受賞 (Awards)
 * **優秀ポスター発表賞**, 第14回 CSJ化学フェスタ2024, 2024年10月.
