--- a/src/pages/index.mdx
+++ b/src/pages/index.mdx
@@ -1,95 +1,195 @@
 ---
 layout: ../layouts/PageLayout.astro
-title: "Yusaku Nakajima | Portfolio"
-description: "中島 優作の研究ポートフォリオサイトです。"
+title: "Yusaku Nakajima | Research Portfolio"
+description: "Research portfolio of Yusaku Nakajima in laboratory automation and robotics for materials science."
+lang: "en"
 ---
 
 # Profile
 
-## 中島 優作 (Yusaku Nakajima)
-**所属**: 大阪大学 / BWH Radiology Research
+## Yusaku Nakajima
 
-**Links**: [[ORCID]](https://orcid.org/0000-0001-9926-9891) [[Google Scholar]](https://scholar.google.co.jp/citations?user=k-UzcUgAAAAJ&hl=ja)
+**Affiliation**: Osaka University / BWH Department of Radiology
 
-材料科学分野へメカトロニクスやロボティクスを応用した、ラボオートメーションの研究を行っています。
-実験作業を自動化するためのロボットハンドリングや、自律計測システムの開発に取り組んでいます。
+Links: [ORCID](https://orcid.org/0000-0001-9926-9891) [Google Scholar](https://scholar.google.co.jp/citations?user=k-UzcUgAAAAJ&hl=en)
 
-![プロフィール写真](/images/profile.png)
+I conduct research on laboratory automation in materials science by applying mechatronics and robotics.
+My work focuses on developing experimental methodologies and autonomous systems that enable highly reproducible and precisely controlled processes, especially in experimental environments that are difficult to handle manually.
+In particular, I specialize in robotic experimental systems for powder grinding, mixing, and mechanochemical reactions.
+
+<img class="profile-photo" src="/images/profile.png" alt="Profile photo" />
+
+### Representative Papers
+
+<p class="figure-note">Click an image to open the paper.</p>
+
+<div class="figure-row">
+  <figure class="profile-figure">
+    <a href="https://doi.org/10.1109/IROS47612.2022.9981081" target="_blank" rel="noreferrer">
+      <img class="profile-figure-image iros-figure" src="/images/iros2022_fig1.jpg" alt="IROS 2022 Figure 1" />
+    </a>
+    <figcaption>
+      <strong>Robotic Powder Grinding with a Soft Jig for Laboratory Automation in Material Science</strong><br />
+      © 2022 IEEE. Reprinted, with permission, from Nakajima et al., IROS 2022.
+    </figcaption>
+  </figure>
+  <figure class="profile-figure">
+    <a href="https://doi.org/10.1109/IROS55552.2023.10341526" target="_blank" rel="noreferrer">
+      <img class="profile-figure-image iros-figure" src="/images/iros2023_fig1.png" alt="IROS 2023 Figure 1" />
+    </a>
+    <figcaption>
+      <strong>Robotic Powder Grinding with Audio-Visual Feedback for Laboratory Automation in Material Science</strong><br />
+      © 2023 IEEE. Reprinted, with permission, from Nakajima et al., IROS 2023.
+    </figcaption>
+  </figure>
+  <figure class="profile-figure">
+    <a href="https://doi.org/10.1039/D4DD00189C" target="_blank" rel="noreferrer">
+      <img class="profile-figure-image dd-figure" src="/images/DD2024_fig1.png" alt="Digital Discovery 2024 Figure 1" />
+    </a>
+    <figcaption>
+      <strong>Force-controlled robotic mechanochemical synthesis</strong><br />
+      From: Y. Nakajima et al., Digital Discovery, 2024. Licensed under CC BY 3.0.
+    </figcaption>
+  </figure>
+</div>
 
 ---
 
-## 経歴 (Experience)
+## Academic Positions and Education
 
-* **2025年10月 - 現在**
-  ハーバード大学医学部 ブリガム・アンド・ウィメンズ病院（BWH）Research Trainee
-* **2024年4月 - 現在**
-  [一般社団法人ラボラトリーオートメーション協会](https://lasa.or.jp/) コアメンバー
-* **2023年4月 - 現在**
-  [大阪大学大学院 工学研究科 物理学系専攻 応用物理学コース](https://nano-ap.eng.osaka-u.ac.jp/) 博士後期課程
-* **2021年4月 - 2023年3月**
-  総合研究大学院大学 高エネルギー加速器科学研究科 物質構造科学専攻 修士(工学)
-* **2021年3月**
-  旭川工業高等専門学校 専攻科 応用科学専攻 学士(工学)
+* **Apr. 2023 – Present**
+  PhD Candidate, Department of Applied Physics, Graduate School of Engineering, Osaka University
 
-## 外部研究歴 (External Research Experience)
+* **Oct. 2025 – Present**
+  Research Trainee, Brigham and Women’s Hospital (BWH), Harvard Medical School
 
-* **2024年7月 - 2025年3月**
-  産業技術総合研究所 中部センター RA ([令和6年度 覚醒プロジェクト](https://kakusei.aist.go.jp/r6/)採択)
-* **2024年1月 - 2024年3月**
-  トヨタ自動車株式会社 東富士研究所 (インターンシップ)
-* **2023年1月 - 2023年3月**
-  オムロンサイニックエックス株式会社 (インターンシップ)
+* **Apr. 2024 – Present**
+  Core Member, Laboratory Automation Association of Japan
+
+* **Apr. 2021 – Mar. 2023**
+  M.Eng., School of High Energy Accelerator Science, SOKENDAI (The Graduate University for Advanced Studies)
+
+* **Mar. 2021**
+  B.Eng., Advanced Course in Applied Science, Asahikawa National College of Technology
 
 ---
 
-## 業績 (Publications)
+## External Research Experience
 
-### 査読付きジャーナル論文 (Journal Papers)
-1. **Yusaku Nakajima**, Kai Kawasaki, Yasuo Takeichi, Masashi Hamaya, Yoshitaka Ushiku, and Kanta Ono.  
-   *"Force-controlled robotic mechanochemical synthesis"* Digital Discovery, 3, 2130-2136, 2024. [[Paper]](https://doi.org/10.1039/D4DD00189C)
+* **Jul. 2024 – Mar. 2025**
+  Research Assistant, National Institute of Advanced Industrial Science and Technology (AIST), Chubu Center
+  (Kakusei Project, FY2024, funded)
 
-2. Yuto Yotsumoto, **Yusaku Nakajima**, Ryusei Takamoto, Yasuo Takeichi, and Kanta Ono.  
-   *"Autonomous robotic experimentation system for powder X-ray diffraction"* Digital Discovery, 3, 2523-2532, 2024. [[Paper]](https://doi.org/10.1039/D4DD00190G)
+* **Jan. 2024 – Mar. 2024**
+  Research Intern, Toyota Motor Corporation, Higashi-Fuji Technical Center
 
-### 査読付き国際会議論文 (International Conferences)
-1. **Yusaku Nakajima**, Masashi Hamaya, Kazutoshi Tanaka, Takafumi Hawai, Felix von Drigalski, Yasuo Takeichi, Yoshitaka Ushiku, and Kanta Ono.  
-   *"Robotic Powder Grinding with Audio-Visual Feedback for Laboratory Automation in Material Science"* 2023 IEEE/RSJ International Conference on Intelligent Robots and Systems (**IROS**), Detroit, Oct. 2023. (Oral) [[Paper]](https://doi.org/10.1109/IROS55552.2023.10341526) [[Video]](https://youtu.be/xh8SjushqTM?si=vh6WgscQwhuIUW6V)
+* **Jan. 2023 – Mar. 2023**
+  Research Intern, Omron SINIC X Corporation
 
-2. **Yusaku Nakajima**, Masashi Hamaya, Yuta Suzuki, Takafumi Hawai, Felix von Drigalski, Kazutoshi Tanaka, Yoshitaka Ushiku, and Kanta Ono.  
-   *"Robotic Powder Grinding with a Soft Jig for Laboratory Automation in Material Science"* 2022 IEEE/RSJ International Conference on Intelligent Robots and Systems (**IROS**), Kyoto, Oct. 2022. (Oral) [[Paper]](https://doi.org/10.1109/IROS47612.2022.9981081) [[Video]](https://youtu.be/jY4CQdlC6NY?si=yeQzeoRcPVfic1PC)
+---
 
-### 著書 (Books)
-1. 濱屋政志, **中島優作**. *"ロボット技術の基礎知識"* 東京化学同人 現代化学増刊48「マテリアル・機械学習・ロボット」, p.28 – p.36, 2024年3月.
-2. 四本優斗, **中島優作**, 小野寛太. *"自律的な材料計測システムの構築：粉末X線回折実験の事例"* 東京化学同人 現代化学増刊48「マテリアル・機械学習・ロボット」, p.151 – p.154, 2024年3月.
-3. **中島優作**, 羽合孝文, 小野寛太. *"自律型計測実験システム開発への挑戦"* 技術情報協会「研究開発部門へのDX導入によるR&Dの効率化、実験の短縮化」, p.470 – p.478, 2022年4月.
+## Publications
 
-### 招待講演 (Invited Talks)
-* **中島優作**. *"ラボラトリーオートメーションのための粉体ハンドリング技術"* セラミックス協会第38回秋季シンポジウム, 2025年9月17日.
-* **中島優作**. *"材料科学における実験自動化とデータ活用 粉体プロセスのインフォマティクス"* IIBMP 2025, 2025年9月4日.
-* **中島優作**. *"材料実験自動化に向けた粉体ハンドリング"* [デジタルラボ研究会](https://digital-laboratory.jp/), 2025年5月9日.
-* **中島優作**. *"コンパクトな自律型実験システム"* 日本化学会第105春季年会, 2025年3月27日.
+### Peer-Reviewed Journal Articles
 
-### 国際会議発表 (International Conferences)
-* **Yusaku Nakajima**, Yuki Nishihori, Keisuke Nagato, Yuki Yamaguchi, Kanta Ono.  
-   *"Evaluating the Applicability of Imitation Learning to Robotic Powder Grinding"* Accelerate Conference 2025, Aug. 12, 2025. (Poster)
-* **Yusaku Nakajima**, Kai Kawasaki, Yasuo Takeichi, Masashi Hamaya, Yoshitaka Ushiku, and Kanta Ono.  
-   *"Force-controlled robotic mechanochemical synthesis"* Workshop on AI for Accelerated Materials Design, NeurIPS 2024, Vancouver, Dec. 2024. (Poster)
-* **Yusaku Nakajima**, Kai Kawasaki, Yasuo Takeichi, Masashi Hamaya, Yoshitaka Ushiku, and Kanta Ono.  
-   *"Force-controlled robotic mechanochemical synthesis"* Workshop on Accelerating Discovery in Natural Science Laboratories with AI and Robotics, ICRA 2024, Yokohama, May 2024. (Poster)
-* **Yusaku Nakajima**, Takafumi Hawai, Yasuo Takeichi, Yuto Yotsumoto, Ryusei Takamoto, Kanta Ono.  
-   *"Automated analysis of mechanochemically-induced reaction with in situ X-ray diffraction"* URCr 2023, Melbourne, Aug. 2023. (Oral)
+1. **Yusaku Nakajima**, Kai Kawasaki, Yasuo Takeichi, Masashi Hamaya, Yoshitaka Ushiku, and Kanta Ono.
+   *"Force-controlled robotic mechanochemical synthesis"* Digital Discovery, 3, 2130–2136, 2024.
+   [[Paper]](https://doi.org/10.1039/D4DD00189C)
 
-### 国内学会発表 (Domestic Conferences)
-* **中島優作**, 他. *"模倣学習を用いた粉体粉砕ロボットシステムの評価"* 第43回日本ロボット学会学術講演会（RSJ2025）, 2025年9月3日. (口頭)
-* **中島優作**, 他. *"ロボットによるメカノケミカル合成制御"* 第14回 CSJ化学フェスタ2024, 2024年10月24日. (ポスター)
-* **中島優作**, 他. *"圧縮応力とせん断応力によるメカノケミカル合成制御"* 第85回 応用物理学会秋季学術講演会, 2024年9月. (口頭)
-* **中島優作**, 他. *"自動計測によるメカノケミカル反応プロセスの解明"* 第84回 応用物理学会 秋季学術講演会, 2023年9月. (口頭)
-* **中島優作**, 他. *"自律実験のための粉体粉砕ロボットシステムの開発と評価"* 第70回 応用物理学会 春季学術講演会, 2023年3月. (口頭)
-* **中島優作**, 他. *"自律的なX線回折実験システムの開発"* 第82回 応用物理学会 秋季学術講演会, 2021年9月. (口頭)
+2. Yuto Yotsumoto, **Yusaku Nakajima**, Ryusei Takamoto, Yasuo Takeichi, and Kanta Ono.
+   *"Autonomous robotic experimentation system for powder X-ray diffraction"* Digital Discovery, 3, 2523–2532, 2024.
+   [[Paper]](https://doi.org/10.1039/D4DD00190G)
 
-### 受賞 (Awards)
-* **優秀ポスター発表賞**, 第14回 CSJ化学フェスタ2024, 2024年10月.
-* **Best Demo Award**, Workshop on Accelerating Discovery in Natural Science Laboratories with AI and Robotics, ICRA 2024, 2024年5月.
+---
+
+### Refereed International Conference Papers
+
+1. **Yusaku Nakajima**, Masashi Hamaya, Kazutoshi Tanaka, Takafumi Hawai, Felix von Drigalski, Yasuo Takeichi, Yoshitaka Ushiku, and Kanta Ono.
+   *"Robotic Powder Grinding with Audio-Visual Feedback for Laboratory Automation in Material Science"*
+   Proceedings of the 2023 IEEE/RSJ International Conference on Intelligent Robots and Systems (IROS), Detroit, USA, Oct. 2023. (Oral)
+   [[Paper]](https://doi.org/10.1109/IROS55552.2023.10341526) [[Video]](https://youtu.be/xh8SjushqTM?si=vh6WgscQwhuIUW6V)
+
+2. **Yusaku Nakajima**, Masashi Hamaya, Yuta Suzuki, Takafumi Hawai, Felix von Drigalski, Kazutoshi Tanaka, Yoshitaka Ushiku, and Kanta Ono.
+   *"Robotic Powder Grinding with a Soft Jig for Laboratory Automation in Material Science"*
+   Proceedings of the 2022 IEEE/RSJ International Conference on Intelligent Robots and Systems (IROS), Kyoto, Japan, Oct. 2022. (Oral)
+   [[Paper]](https://doi.org/10.1109/IROS47612.2022.9981081) [[Video]](https://youtu.be/jY4CQdlC6NY?si=yeQzeoRcPVfic1PC)
+
+---
+
+### Book Chapters
+
+1. Masashi Hamaya, **Yusaku Nakajima**.
+   *"Fundamentals of Robotic Technology"*
+   In: *Material, Machine Learning, and Robotics*, Tokyo Kagaku Dojin, pp.28–36, March 2024.
+
+2. Yuto Yotsumoto, **Yusaku Nakajima**, Kanta Ono.
+   *"Autonomous Material Measurement Systems: A Case Study of Powder X-ray Diffraction"*
+   In: *Material, Machine Learning, and Robotics*, Tokyo Kagaku Dojin, pp.151–154, March 2024.
+
+3. **Yusaku Nakajima**, Takafumi Hawai, Kanta Ono.
+   *"Challenges in Developing Autonomous Experimental Measurement Systems"*
+   In: *DX for R&D Efficiency and Experimental Acceleration*, Technical Information Institute of Japan, pp.470–478, April 2022.
+
+---
+
+### Invited Talks
+
+**2025**
+
+* **Yusaku Nakajima**. *"Powder Handling Technologies for Laboratory Automation"* Ceramic Society of Japan, 38th Autumn Symposium, Sep. 17, 2025.
+* **Yusaku Nakajima**. *"Experimental Automation and Data Utilization in Materials Science: Informatics for Powder Processes"* IIBMP 2025, Sep. 4, 2025.
+* **Yusaku Nakajima**. *"Powder Handling for Autonomous Materials Experiments"* Digital Laboratory Study Group, May 9, 2025.
+* **Yusaku Nakajima**. *"Compact Autonomous Experimental Systems"* The Chemical Society of Japan, 105th Spring Annual Meeting, Mar. 27, 2025.
+
+---
+
+### International Conference Presentations
+
+**2025**
+
+* **Yusaku Nakajima**, Yuki Nishihori, Keisuke Nagato, Yuki Yamaguchi, Kanta Ono.
+  *"Evaluating the Applicability of Imitation Learning to Robotic Powder Grinding"* Accelerate Conference 2025, Aug. 12, 2025. (Poster)
+
+**2024**
+
+* **Yusaku Nakajima**, Kai Kawasaki, Yasuo Takeichi, Masashi Hamaya, Yoshitaka Ushiku, and Kanta Ono.
+  *"Force-controlled robotic mechanochemical synthesis"* Workshop on AI for Accelerated Materials Design, NeurIPS 2024, Vancouver, Canada, Dec. 2024. (Poster)
+* **Yusaku Nakajima**, Kai Kawasaki, Yasuo Takeichi, Masashi Hamaya, Yoshitaka Ushiku, and Kanta Ono.
+  *"Force-controlled robotic mechanochemical synthesis"* Workshop on Accelerating Discovery in Natural Science Laboratories with AI and Robotics, ICRA 2024, Yokohama, Japan, May 2024. (Poster)
+
+**2023**
+
+* **Yusaku Nakajima**, Takafumi Hawai, Yasuo Takeichi, Yuto Yotsumoto, Ryusei Takamoto, Kanta Ono.
+  *"Automated analysis of mechanochemically-induced reaction with in situ X-ray diffraction"* URCr 2023, Melbourne, Australia, Aug. 2023. (Oral)
+
+---
+
+### Domestic Conference Presentations (Japan)
+
+**2025**
+
+* **Yusaku Nakajima**, et al. *"Evaluation of Robotic Powder Grinding Systems Using Imitation Learning"* 43rd Annual Conference of the Robotics Society of Japan (RSJ2025), Sep. 3, 2025. (Oral)
+
+**2024**
+
+* **Yusaku Nakajima**, et al. *"Robotic Control of Mechanochemical Synthesis"* 14th CSJ Chemistry Festa 2024, Oct. 24, 2024. (Poster)
+* **Yusaku Nakajima**, et al. *"Mechanochemical Synthesis Controlled by Compressive and Shear Stress"* 85th Autumn Meeting of the Japan Society of Applied Physics, Sep. 2024. (Oral)
+
+**2023**
+
+* **Yusaku Nakajima**, et al. *"Elucidation of Mechanochemical Reaction Processes by Automated Measurement"* 84th Autumn Meeting of the Japan Society of Applied Physics, Sep. 2023. (Oral)
+* **Yusaku Nakajima**, et al. *"Development and Evaluation of a Robotic Powder Grinding System for Autonomous Experiments"* 70th Spring Meeting of the Japan Society of Applied Physics, Mar. 2023. (Oral)
+
+**2021**
+
+* **Yusaku Nakajima**, et al. *"Development of an Autonomous X-ray Diffraction Experiment System"* 82nd Autumn Meeting of the Japan Society of Applied Physics, Sep. 2021. (Oral)
+
+---
+
+### Awards
+
+* **Excellent Poster Presentation Award**, 14th CSJ Chemistry Festa 2024, Oct. 2024.
+* **Best Demo Award**, Workshop on Accelerating Discovery in Natural Science Laboratories with AI and Robotics, ICRA 2024, May 2024.
 
 ---
 
@@ -104,16 +204,77 @@ description: "中島 優作の研究ポートフォリオサイトです。"
     border-radius: 8px;
     box-shadow: 0 4px 10px rgba(0,0,0,0.1);
   }
-  
-  /* 論文リストのスタイル調整 */
+
   h2 {
     border-bottom: 2px solid #f4f4f5;
     padding-bottom: 0.5rem;
     margin-top: 3rem;
   }
-  
+
   li {
     margin-bottom: 1rem;
     line-height: 1.6;
+  }
+
+  .figure-row {
+    display: flex;
+    flex-wrap: wrap;
+    gap: 1rem;
+    justify-content: center;
+    align-items: flex-start;
+    margin-bottom: 2rem;
+  }
+
+  .profile-photo {
+    display: block;
+    height: 240px;
+    width: auto;
+    margin: 2rem auto;
+    border-radius: 8px;
+    box-shadow: 0 4px 10px rgba(0,0,0,0.1);
+  }
+
+  .profile-figure {
+    flex: 1 1 300px;
+    margin: 0;
+    text-align: center;
+    max-width: 420px;
+  }
+
+  .profile-figure-image {
+    height: auto;
+    max-width: 420px;
+    border-radius: 8px;
+    box-shadow: 0 4px 10px rgba(0,0,0,0.1);
+  }
+
+  .iros-figure {
+    width: auto;
+  }
+
+  .dd-figure {
+    width: 100%;
+  }
+
+  @media (max-width: 720px) {
+    .profile-photo,
+    .profile-figure-image {
+      height: auto;
+      width: 100%;
+      max-width: 360px;
+    }
+  }
+
+  .profile-figure figcaption {
+    margin-top: 0.5rem;
+    font-size: 0.85rem;
+    color: rgba(var(--gray-dark), 0.8);
+  }
+
+  .figure-note {
+    margin: 0.5rem 0 1rem;
+    font-size: 0.85rem;
+    color: rgba(var(--gray-dark), 0.8);
+    text-align: center;
   }
 `}</style>
